<resources>
    <string name="app_name">Android</string>
    <string name="save">Save</string>
    <string name="isbn">ISBN</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="date">Date</string>
    <string name="create_book">Create book</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>